--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <br />
 <i>wuyuanwei2010 [at] gmail [dot] com</i><br />
   
-<a href="https://scholar.google.com/citations?user=xv2MmAIAAAAJ&hl=en">Google Scholar</a> &nbsp;
-<a href="https://dblp.uni-trier.de/pers/hd/w/Wu:Yuanwei">DBLP</a> &nbsp;
-<a href="https://www.linkedin.com/in/yuanwei-wu-3716b539/">LinkedIn</a></p>
+
+<a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
 
 <h2>About</h2>
