--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <title>João Bandeira</title>
 </head>
 <body>
+  <br />
 <div id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="images/joao.JPG" alt="Wu" width="150px" />&nbsp;</td>
-<td align="left"><h1>Yuanwei Wu 吴元伟<br /></h1>
+<img src="images/joao.JPG" alt="30" width="150px" />&nbsp;</td>
+<td align="left"><h1>João Bandeira<br /></h1>
 <p>Currently: VC at Iberis Capital</br>
 	Focused in early stage technology companies</br>
 
