--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <br />
 <div id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="images/joao.JPG" alt="30" width="150px" />&nbsp;</td>
+<img src="images/joao.JPG" alt="joao.jpg" height="150px" width="30" />&nbsp;</td>
 <td align="left"><h1>João Bandeira<br /></h1>
 <p>Currently: VC at Iberis Capital</br>
 	Focused in early stage technology companies</br>
