--- a/index.html
+++ b/index.html
@@ -49,147 +49,35 @@ working on image understanding and video analytics for Smart Home using computer
 </li>
 </ul>
   
-<h2>Publications</h2>
-<h3>Book Chapter </h3>
+<h2>Book Recommendations</h2>
+<h3>Technology </h3>
  <ul>
    <li>
-      <p>Object Detection with Convolutional Neural Networks
-        <a href="https://arxiv.org/pdf/1912.01844.pdf">[PDF]</a></br>
-        Kaidong Li, Wenchi Ma, Usman Sajid, <b>Yuanwei Wu</b> and Guanghui Wang</br>
-        Deep Learning in Computer Vision: Principles and Applications, ISBN 9781138544420, 2020.
+      <p>Book Name
+        <a href="https://arxiv.org/pdf/1912.01844.pdf">[GoodReads]</a></br>
       </p>
    </li>
  </ul>
   
-<h3>Journal Publications</h3>
+<h3>Other</h3>
 <ul>
    <li>
-      <p>MDFN: Multi-scale deep feature learning network for object detection
-        <a href="https://arxiv.org/pdf/1912.04514.pdf">[PDF]</a></br>
-        Wenchi Ma, <b>Yuanwei Wu</b>, Feng Cen, Guanghui Wang</br>
-        Pattern Recognition (PR), 2020.
+      <p>Title
+        <a href="https://arxiv.org/pdf/1912.04514.pdf">[Link or File]</a></br>
       </p>
    </li>
-
-  <li>
-     <p>Real-time Obstacle Detection and Tracking for Sense-and-Avoid Mechanism in UAVs
-        <a href="https://ieeexplore.ieee.org/document/8286944">[PDF]</a></br>
-        Sushil Bharati, <b>Yuanwei Wu</b>, Yao Sui, Curtis Padgett and Guanghui Wang</br>
-        IEEE Transactions on Intelligent Vehicles, Volume: 3 , Issue: 2, pp:185-197, 2018.
-     </p>
-   </li>
-
-   <li>
-     <p>Vision-based Real-Time Aerial Object Localization and Tracking for UAV Sensing System
-        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8080161">[PDF]</a>
-        <a href="https://github.com/RyanCV/Vision-based-OLT">[Code]</a></br>
-        <b>Yuanwei Wu</b>, Yao Sui, and Guanghui Wang</br>
-        IEEE Access, Vol. 5, 23969 - 23978, 2017.
-     </p>
-   </li>
+  
  </ul>
   
-<h3>Conference Publications</h3>
+<h2> Other</h2>
 <ul>
-   <li>
-      <p>Self-Orthogonality Module: A Network Architecture Plug-in for Learning Orthogonal Filters
-        <a href="http://openaccess.thecvf.com/content_WACV_2020/papers/Zhang_Self-Orthogonality_Module_A_Network_Architecture_Plug-in_for_Learning_Orthogonal_Filters_WACV_2020_paper.pdf">[PDF]</a></br>
-        Ziming Zhang, Wenchi Ma, <b>Yuanwei Wu</b> and Guanghui Wang</br>
-        The IEEE Winter Conference on Applications of Computer Vision (WACV), 2020.
-      </p>
-   </li>
+		<li>Title 1</li>
+    <li>Title 2</li>
+		<li>Title 3</li>
 
-   <li>
-     <p>Unsupervised Joint 3D Object Model Learning and 6D Pose Estimation for Depth-Based Instance Segmentation
-        <a href="http://openaccess.thecvf.com/content_ICCVW_2019/papers/R6D/Wu_Unsupervised_Joint_3D_Object_Model_Learning_and_6D_Pose_Estimation_ICCVW_2019_paper.pdf">[PDF]</a></br>
-        <b>Yuanwei Wu</b>, Tim K. Marks, Anoop Cherian, Siheng Chen, Chen Feng, Guanghui Wang and Alan Sullivan</br>
-        The IEEE International Conference on Computer Vision (ICCV) 2019, 5th International Workshop on Recovering 6D Object Pose (R6D).
-     </p>
-   </li>
-
-    <li>
-     <p>Unsupervised Deep Feature Transfer for Low Resolution Image Classification
-        <a href="http://openaccess.thecvf.com/content_ICCVW_2019/papers/RLQ/Wu_Unsupervised_Deep_Feature_Transfer_for_Low_Resolution_Image_Classification_ICCVW_2019_paper.pdf">[PDF]</a></br>
-        <b>Yuanwei Wu</b>, Ziming Zhang and Guanghui Wang</br>
-        The IEEE International Conference on Computer Vision (ICCV) 2019, Workshop and Challenge on Real-World Recognition from Low-Quality Images and Videos (RLQ).
-     </p>
-   </li>
-
-<li>
-     <p>BPGrad: Towards Global Optimality in Deep Learning via Branch and Pruning
-        <a href="http://openaccess.thecvf.com/content_cvpr_2018/papers/Zhang_BPGrad_Towards_Global_CVPR_2018_paper.pdf">[PDF]</a>
-        <a href="2018_CVPR/2018_CVPR_BPGrad_poster.pdf">[Poster]</a></br>
-        Ziming Zhang*, <b>Yuanwei Wu</b>*, and Guanghui Wang (* Equal contribution)</br>
-        The IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2018.
-     </p>
-   </li>
-
-<li>
-     <p>MDCN: Multi-Scale, Deep Inception Convolutional Neural Networks for Efficient Object Detection
-        <a href="https://arxiv.org/pdf/1809.01791.pdf">[PDF]</a>
-        <a href="ICPR2018/ICPR18_poster.pdf">[Poster]</a></br>
-        Wenchi Ma, <b>Yuanwei Wu</b>, Zongbo Wang and Guanghui Wang</br>
-        International Conference on Pattern Recognition (ICPR), 2018.
-     </p>
-   </li>
-
-<li>
-     <p>Fast and Robust Object Tracking with Adaptive Detection
-        <a href="https://ieeexplore.ieee.org/document/7814672">[PDF]</a></br>
-        Sushil Bharati, Soumyaroop Nandi, <b>Yuanwei Wu</b>, Yao Sui and Guanghui Wang</br>
-        IEEE 28th International Conference on Tools with Artificial Intelligence (ICTAI), 2016.
-     </p>
-   </li>
- </ul>
-
-<h2> Research Experience</h2>
-<ul>
-		<li>Graduate Research Assistant, The University of Kansas, Lawrence, KS, August 2015 - December 2017</li>
-    <li>Research Intern, Mitsubishi Electric Research Laboratories, Cambridge, MA, September 2018 - August 2019</li>
-		<li>Research Intern, Comcast Applied AI Labs, Washington, D.C., May 2018 - August 2018</li>
-		<!-- <li>AI Engineer Intern, Midea Emerging Technology Center, San Jose, CA, May 2017 - August 2017</li> -->
-		<li>Research Intern, Mitsubishi Electric Research Laboratories, Cambridge, MA, January 2017 - March 2017</li>
 </ul>
-
-<h2>Teaching Experience</h2>
-<ul>
- <li>Graduate Teaching Assistant, The University of Kansas
-      <ul> 
-        <li> EECS 268: Programming II, C++ (Fall 2017) </li>
-      </ul>
- </li>
- <li> Teaching Assistant, Tufts University
-      <ul>
-        <li> ES3: Introduction to Electrical Engineering (Fall 2012)</li>
-        <li> ES4: Introduction to Digital Logic Circuits (Spring 2013)</li>
-      </ul>
-  </li>
-</ul>
-
-<h2>Professional Activities</h2>
-<ul>
-	<li>Journal Reviewer
-		<ul>
-		<li>IEEE Transactions on Multimedia (TMM)</li>
-		<li>Pattern Recognition (PR)</li>
-		<li>IEEE Access</li>
-		<li>IEEE Geoscience and Remote Sensing Letters (GRSL)</li>
-		<li>IEEE Transactions on Medical Imaging (TMI)</li>
-		<li>Applied Sciences</li>
-		<li>Sensors</li>
-		</ul>
-	</li>
-	<li>Conference Reviewer
-		<ul>
-    <li>IEEE Winter Conference on Applications of Computer Vision (WACV), 2019, 2020</li>
-		<li>International Conference on Pattern Recognition (ICPR), 2020</li>
-		<li>International Joint Conference on Artificial Intelligence (IJCAI), 2019</li>
-		<li>IEEE International Conference on Tools with Artificial Intelligence (ICTAI), 2018, 2019</li>
-		</ul>
-	</li>
-	</ul>
-
-<h2>Miscellaneous</h2>
+    
+<h2>Interesting Articles / Links </h2>
 <ul>
 	   <li><A href="http://3dvision.princeton.edu/courses/COS598/2014sp/slides/lecture21_how2research.pdf">How to do research in Computer Vision</A></li>
       	   <li><A href="http://www.deeplearningindaba.com/uploads/1/0/2/6/102657286/research-paper-writing.pdf">How to write a great 
@@ -201,9 +89,7 @@ research paper</A></li>
 <hr align=left>
     <footer>                
     <div class="page-header" style="margin-top: 0px;"></div>
-    <div class="col-md-2" style="text-align: center">
-      <a href="http://info.flagcounter.com/wYum"><img src="http://s10.flagcounter.com/count2/wYum/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
-      <span>Last updated: May, 2020</span>
+      <span>João Bandeira, 2022</span>
     </div>
   </footer>
 </div>
