--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <table class="imgtable"><tr><td>
 <img src="images/joao.jpg" alt="Wu" width="150" />&nbsp;</td>
 <td align="left"><h1>João Bandeira<br /></h1>
-<p>Currently: VC at Iberis Capital</br>
+<p>Currently: VC Investor at Iberis Capital</br>
 	Focused in early stage technology companies</br>
 
 <br />
@@ -23,31 +23,20 @@
 <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
 
+
 <h2>About</h2>
-<p>I am a research scientist in <a href="https://objectvideolabs.com/">ObjectVideo Labs</a> at 
-	<a href="https://www.alarm.com/">Alarm.com</a>, 
-working on image understanding and video analytics for Smart Home using computer vision and machine learning techniques.
-</p>
-  
-<p>I received my Ph.D. degree in Electrical Engineering from <a href="https://ku.edu">The University of Kansas</a>, 
-  advised by Professor <a href="http://www.ittc.ku.edu/~ghwang/">Guanghui Wang</A> in 2019. 
-  Before that, I received my Master's degree in Electrical Engineering from <a href="https://www.tufts.edu">Tufts University</a>.
-  My research interests mainly focus on the area of computer vision and deep learning, particularly on efficient learning of 
-  deep models for Human Pose Estimation, Face Recognition, 3D point cloud analysis, object detection and tracking. 
-<br /></p>
+
+  <li><p>BSc Electrical Engineer (Instituto Superior Técnico)</p></li>
+  <li><p>MSc Management, Major Finance (Nova School of Business and Economics)</p></li>
+
   
 <h2>News</h2>
+
 <ul>
-<li><p>2020/02: Joined ObjectVideo Labs.</p></li>
-<li><p>2019/12: I successfully defended my Ph.D. dissertation.</p></li>
-<li><p>2019/12: &ldquo;Self-Orthogonality Module for Learning Orthogonal Filters&rdquo; accepted by WACV 2020.</p></li>
-<li><p>2019/11: &ldquo;Multi-scale deep feature learning network for object detection&rdquo; accepted by Pattern Recognition.</p></li>
-<li><p>2019/08: &ldquo;Unsupervised Joint 3D Object Model Learning and 6D Pose Estimation&rdquo; accepted by ICCV 2019 workshop.</p></li>
-<li><p>2019/08: &ldquo;Deep Feature Transfer for Low Resolution Image Classification&rdquo; accepted by ICCV 2019 workshop.</p></li>
-<li><p>2018/04: &ldquo;Multi-scale object detection&rdquo; accpeted by ICPR 2018.</p></li>
-<li><p>2018/03: &ldquo;BPGrad&rdquo; accepted by CVPR 2018.</p>
-</li>
-</ul>
+<li><p><b>07/2021-Present:</b> VC Investor - Iberis Capital (Portugal) </br>
+  Leading all early-stage technology investments and monitoring portfolio companies</p></li>
+<li><p>09/2020-06/2021: Investment Associate - EDP Ventures (Remote)</br>
+  Led two investments in Series</p></li></ul>
   
 <h2>Book Recommendations</h2>
 <h3>Technology </h3>
