--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
 <ul>
 <li><p><b>07/2021-Present:</b> VC Investor - Iberis Capital (Portugal) </br>
-  Leading all early-stage technology investments and monitoring portfolio companies</p></li><br>
-  </br>
+  Leading all early-stage technology investments and monitoring portfolio companies</p></li><br></br>
 <li><p>09/2020-06/2021: Investment Associate - EDP Ventures (Remote)</br>
   Led two investments in Series</p></li></ul>
   
