--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img src="images/joao.jpg" alt="Wu" width="150" />&nbsp;</td>
 <td align="left"><h1>João Bandeira<br /></h1>
 <p>Currently: VC Investor at Iberis Capital</br>
-	Focused in early stage technology companies</br>
+	Based in Lisbon, Portugal</br>
 
 <br />
 <i>jms.bandeira(at)hotmail.com</i><br />
@@ -35,6 +35,8 @@
 <ul>
 <li><p><b>07/2021-Present:</b> VC Investor - Iberis Capital (Portugal) </br>
   Leading all early-stage technology investments and monitoring portfolio companies</p></li></br>
+  <a href="https://www.sensei.tech/">Sensei</a> <a href="https://soundparticles.com/">Sound Particles</a> <a href="https://tonicapp.pt/">Sound Particles</a> </br>
+  
 <li><p>09/2020-06/2021: Investment Associate - EDP Ventures (Remote)</br>
   Led two investments in Series</p></li></ul>
   
