--- a/index.html
+++ b/index.html
@@ -17,20 +17,14 @@
 	Based in Lisbon, Portugal</br>
 
 <br />
-<i>jms.bandeira(at)hotmail.com</i><br />
+<i>BSc Electrical Engineering</br>
+  MSc Management, Major Finance</i><br />
   
 
 <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
-
-
-<h2>About</h2>
-<ul>
-<li><p>BSc Electrical Engineer (Instituto Superior Técnico)</p></li>
-<li><p>MSc Management, Major Finance (Nova School of Business and Economics)</p></li>
-</ul>
   
-<h2>News</h2>
+<h2>Work Experience</h2>
 
 <ul>
 <li><p><b>07/2021-Present:</b> VC Investor - Iberis Capital (Portugal) </br>
@@ -39,6 +33,16 @@
   
 <li><p>09/2020-06/2021: Investment Associate - EDP Ventures (Remote)</br>
   Led two investments in Series</p></li></ul>
+  
+  <h2>Side Projects</h2>
+  <ul>
+    <li><p><b>Name</b></br>
+      Developed a side project
+    
+    </p></li>
+  
+  </ul>
+  
   
 <h2>Book Recommendations</h2>
 <h3>Technology </h3>
@@ -76,7 +80,8 @@ research paper</A></li>
 	   <li><A href="https://github.com/RyanCV/RyanCV.github.io/blob/master/How%20to%20Review%20for%20CVPR.pptx">How to review CVPR
 research paper</A></li>
 </ul>
-
+</br>
+</br>
 <hr align=left>
     <footer>                
     <div class="page-header" style="margin-top: 0px;"></div>
