--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	Based in Lisbon, Portugal</br>
 
 <br />
-<i>BSc Electrical Engineering</br>
-  MSc Management, Major Finance</i><br />
+BSc Electrical Engineering</br>
+  MSc Management, Major Finance<br />
   
 
 <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
