--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ BSc Electrical Engineering</br>
   Leading all early-stage technology investments and monitoring portfolio companies</p></li>
   <a href="https://www.sensei.tech/">Sensei</a> <a href="https://soundparticles.com/">Sound Particles</a> <a href="https://tonicapp.pt/">TonicApp</a> </br> </br>
   
-<li><p>09/2020-06/2021: Investment Associate - EDP Ventures (Remote)</br>
+<li><p>09/2020-06/2021: <b>Investment Associate - EDP Ventures (Remote)</b></br>
   Led two investments in Series</p></li></ul>
   
   <h2>Side Projects</h2>
