--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ BSc Electrical Engineering</br>
 <h2>Work Experience</h2>
 
 <ul>
-<li><p><b>07/2021-Present:</b> VC Investor - Iberis Capital (Portugal) </br>
+<li><p><b>07/2021 - Present:</b> VC Investor - Iberis Capital (Portugal) </br>
   Leading all early-stage technology investments and monitoring portfolio companies</p></li>
   <a href="https://www.sensei.tech/">Sensei</a> <a href="https://soundparticles.com/">Sound Particles</a> <a href="https://tonicapp.pt/">TonicApp</a> </br> </br>
   
-<li><p>09/2020-06/2021: <b>Investment Associate - EDP Ventures (Remote)</b></br>
+<li><p><b>09/2020 - 06/2021:</b> Investment Associate - EDP Ventures (Remote)</br>
   Led two investments in Series</p></li></ul>
   
   <h2>Side Projects</h2>
