--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@ BSc Electrical Engineering</br>
   <a href="https://www.sensei.tech/">Sensei</a> - <a href="https://soundparticles.com/">Sound Particles</a> - <a href="https://tonicapp.pt/">TonicApp</a> </br> </br>
   
 <li><p><b>09/2020 - 06/2021:</b> Investment Associate - EDP Ventures (Remote)</br>
-  Led two investments in Series</p></li></ul>
+  Led two investments in Series A equity rounds</br>
+  Performed investment due diligence (industry/company)</br>
+  Implemented an internal CRM system</br>
+</p></li></ul>
+  
   
   <h2>Side Projects</h2>
   <ul>
