--- a/index.html
+++ b/index.html
@@ -24,16 +24,33 @@ BSc Electrical Engineering</br>
 <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
   
-<h2>Work Experience</h2>
+<h2>Startup Experience</h2>
+06/2017 - 08/2019
+  <ul>
+    <li><p><b>Country Manager - Sailo, Inc. (Remote) </b> </br>
+      Led the expansion of the startup into Portugal</br>
+      Responsible for all the supply-side of the marketplace in Portugal</br>
+      Managed sales, customer support service and ~€50,000 in bookings</br>
+      
+  </ul>
 
+<h2>Work Experience</h2>
+07/2021 - Present </br>
 <ul>
-<li><p><b>07/2021 - Present:</b> VC Investor - Iberis Capital (Portugal) </br>
+<li><p><b>VC Investor - </b>Iberis Capital (Portugal)  </br>
   Leading all early-stage technology investments and monitoring portfolio companies</p></li>
   <a href="https://www.sensei.tech/">Sensei</a> - <a href="https://soundparticles.com/">Sound Particles</a> - <a href="https://tonicapp.pt/">TonicApp</a> </br> </br>
-  
-<li><p><b>09/2020 - 06/2021:</b> Investment Associate - EDP Ventures (Remote)</br>
-  Led two investments in US-based startups</br>
-  Implemented an internal CRM system</br>
+</ul>
+      09/2020 - 07/2021
+      <ul>
+<li><p><b>Investment Associate - </b>EDP Ventures (Remote)</br>
+  EDP Ventures is the venture capital arm of EDP and invests in early stage startups</br> </br> </ul>
+
+09/2019 - 09/2020
+<ul>
+  <li><p><b>Private Equity Analyst - </b>Crest Capital Partners (Portugal)</br>
+    Crest is a private equity firm with an exclusive focus on sustainable and competitive Portuguese businesses</br> 
+
 </p></li></ul>
   
   
