--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ BSc Electrical Engineering</br>
 
 09/2019 - 09/2020
 <ul>
-  <li><p><b>Private Equity Analyst - </b>Crest Capital Partners (Portugal)</br>
+  <li><p><b>Private Equity - </b>Crest Capital Partners (Portugal)</br>
     Crest is a private equity firm with an exclusive focus on sustainable and competitive Portuguese businesses</br> 
 
 </p></li></ul>
