--- a/index.html
+++ b/index.html
@@ -63,12 +63,18 @@ BSc Electrical Engineering</br>
       <a href="https://apps.apple.com/us/app/gather-social-app/id1560805255">Apple Store</a>
     </p></li></br>
   </ul>
-    02/2015 - 05/2016
+    03/2016 - 05/2017
     <ul>
     <li><b>Turingh.com</b></li>
-    Built custom bots for facebook pages and business websites</br>
+    Built custom Facebook chat bots for restaurants and companies </br>
+    </ul></br>
     
-    
+    01/2015 - 02/2016
+    <ul>
+      <li><b>Ecommerce business</li></b>
+      Built an ecommerce website, selling mainly GoPro and camera accessories in Portugal</br>
+      Managed suppliers in China
+    </ul>
   
   </ul>
   
@@ -103,9 +109,8 @@ BSc Electrical Engineering</br>
   
 
   
-  </br>
-  </br>
-</br>
+  
+
 </br>
 <hr align=left>
     <footer>                
