--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ BSc Electrical Engineering</br>
   MSc Management, Major Finance<br />
   
 
-<a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
+<!--- <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p> --->
 </td></tr></table>
   
 <h2>Startup Experience</h2>
