--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ BSc Electrical Engineering</br>
 <ul>
 <li><p><b>VC Investor - </b>Iberis Capital (Portugal)  </br>
   Leading all early-stage technology investments and monitoring portfolio companies</p></li>
-  <a href="https://www.sensei.tech/">Sensei</a> - <a href="https://www.defined.ai/">Defined.ai</a> - <a href="https://soundparticles.com/">Sound Particles</a> - <a href="https://tonicapp.pt/">TonicApp</a> </br> </br>
+  <a href="https://www.sensei.tech/">Sensei</a> - <a href="https://soundparticles.com/">Sound Particles</a> - <a href="https://tonicapp.pt/">TonicApp</a> </br> </br>
 </ul>
       
       09/2020 - 07/2021
