--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ BSc Electrical Engineering</br>
   MSc Management, Major Finance<br />
   
 
-<!--- <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p> --->
+<a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
   
 <h2>Startup Experience</h2>
@@ -31,7 +31,7 @@ BSc Electrical Engineering</br>
       Led the expansion of the startup into Portugal</br>
       Responsible for all the supply-side of the marketplace in Portugal</br>
       Managed sales, customer support service and ~€30,000 in bookings</br>
-      
+      <a href="https://www.sailo.com/">Sailo</a></p>
   </ul>
 
 <h2>Work Experience</h2>
