--- a/index.html
+++ b/index.html
@@ -24,106 +24,8 @@ BSc Electrical Engineering</br>
 <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
   
-<h2>Startup Experience</h2>
-06/2017 - 08/2019
-  <ul>
-    <li><p><b>Country Manager - Sailo, Inc. (Remote) </b> </br>
-      Led the expansion of the startup into Portugal</br>
-      Responsible for all the supply-side of the marketplace in Portugal</br>
-      Managed sales, customer support service and ~€30,000 in bookings</br>
-      <a href="https://www.sailo.com/">Sailo</a></p>
-  </ul>
-
-<h2>Work Experience</h2>
-07/2021 - Present </br>
-<ul>
-<li><p><b>VC Investor - </b>Iberis Capital (Portugal)  </br>
-  Leading all early-stage technology investments and monitoring portfolio companies</p></li>
-  <a href="https://www.sensei.tech/">Sensei</a> - <a href="https://soundparticles.com/">Sound Particles</a> - <a href="https://tonicapp.pt/">TonicApp</a> </br> </br>
-</ul>
-      
-      09/2020 - 07/2021
-      <ul>
-<li><p><b>Investment Associate - </b>EDP Ventures (Remote)</br>
-  EDP Ventures is the venture capital arm of EDP and invests in early stage startups</br> </br> </ul>
-
-09/2019 - 09/2020
-<ul>
-  <li><p><b>Private Equity - </b>Crest Capital Partners (Portugal)</br>
-    Crest is a private equity firm with an exclusive focus on sustainable and competitive Portuguese businesses</br> 
-
-</p></li></ul>
   
-  
-  <h2>Side Projects</h2>
-  05/2019 - 09/2020
-  <ul>
-    <li><p><b>Gather - Social App</b></br>
-      Developed a social app to schedule events and manage social
-      agendas, published on the App Store </br>
-      <a href="https://apps.apple.com/us/app/gather-social-app/id1560805255">Apple Store</a>
-    </p></li></br>
-  </ul>
-    03/2016 - 05/2017
-    <ul>
-    <li><b>Turingh.com</b></li>
-    Built custom Facebook chat bots for restaurants and companies </br>
-    </ul></br>
+  </br>
+  <li> <h4><a  href="experience.html">  Experience</a> </li>
+  <li><h4><a  href="books.html">  Book Recommendations</a> </li>
     
-    01/2015 - 02/2016
-    <ul>
-      <li><b>Ecommerce business</li></b>
-      Built an ecommerce website, selling mainly GoPro and camera accessories in Portugal</br>
-      Managed suppliers in China
-    </ul>
-  
-  </ul>
-  
-  
-<h2>Book Recommendations</h2>
-
- <ul>
-    <li><p><b>Shoe Dog, </b> Phil Knight <a href="https://www.goodreads.com/book/show/27220736-shoe-dog">[Goodreads]</a></br></p></li>
-    <li><p><b>The Ride of a Lifetime, </b> Robert Iger <a href="https://www.goodreads.com/book/show/44525305-the-ride-of-a-lifetime">[Goodreads]</a></br></p></li>
-    <li><p><b> The Cold Start Problem, </b> Andrew Chen <a href="https://www.goodreads.com/book/show/55338968-the-cold-start-problem">[Goodreads]</a></br></p></li>
-    <li><p><b> The Hard Thing about Hard Things, </b> Ben Horowitz <a href="https://www.goodreads.com/book/show/18176747-the-hard-thing-about-hard-things">[Goodreads]</a></br></p></li>
-    <li><p><b>The Almanack of Naval Ravikant, </b> Eric Jorgenson <a href="https://www.goodreads.com/book/show/54898389-the-almanack-of-naval-ravikant">[Goodreads]</a></br></p></li>
-    <li><p><b>Zero to One, </b> Peter Thiel <a href="https://www.goodreads.com/book/show/18050143-zero-to-one">[Goodreads]</a></br></p></li>
-    <li><p><b>Blitzscaling, </b> Reid Hoffman <a href="https://www.goodreads.com/book/show/38398157-blitzscaling">[Goodreads]</a></br></p></li>
-    <li><p><b>Thinking, Fast and Slow,</b> Daniel Kahneman <a href="https://www.goodreads.com/book/show/11468377-thinking-fast-and-slow">[Goodreads]</a></br></p></li>
-    <li><p><b>The Lean Startup,</b> Eric Ries <a href="https://www.goodreads.com/book/show/10127019-the-lean-startup">[Goodreads]</a></br></p></li>
-    <li><p><b>American Icon, </b> Bryce G. Hoffman <a href="https://www.goodreads.com/book/show/13132620-american-icon">[Goodreads]</a></br></p></li>
-    <li><p><b> No Rules Rules, </b> Reed Hastings <a href="https://www.goodreads.com/book/show/49099937-no-rules-rules">[Goodreads]</a></br></p></li>
-    <li><p><b> Factfulness, </b> Hans Rosling <a href="https://www.goodreads.com/book/show/34890015-factfulness">[Goodreads]</a></br></p></li>
-    <li><p><b>The Upstarts,</b> Brad Stone <a href="https://www.goodreads.com/book/show/29905580-the-upstarts">[Goodreads]</a></br></p></li>
-    <li><p><b>The Everything Store,</b> Brad Stone <a href="https://www.goodreads.com/book/show/17660462-the-everything-store">[Goodreads]</a></br></p></li>
-    <li><p><b>Inspired, </b> Marty Cagan <a href="https://www.goodreads.com/book/show/35249663-inspired">[Goodreads]</a></br></p></li>
-        <li><p><b> Alibaba: The House that Jack Ma Built</b> Duncan Clark <a href="https://www.goodreads.com/book/show/25817524-alibaba">[Goodreads]</a></br></p></li>
-    <li><p><b> The Bezos Letters, </b> Steve Anderson <a href="https://www.goodreads.com/book/show/51811688-the-bezos-letters">[Goodreads]</a></br></p></li>
-    <li><p><b> The Psychology of Money, </b> Morgan Housel <a href="https://www.goodreads.com/book/show/41881472-the-psychology-of-money">[Goodreads]</a></br></p></li>
-    <li><p><b> Originals, </b> Adam Grant <a href="https://www.goodreads.com/book/show/25614523-originals">[Goodreads]</a></br></p></li>
-    <li><p><b>Guns,Germs and Steel, </b> Jared Diamond  <a href="https://www.goodreads.com/book/show/1842.Guns_Germs_and_Steel">[Goodreads]</a></br></p></li>
-<li><p><b>Secrets of Sand Hill Road,</b> Scott Kupor <a href="https://www.goodreads.com/book/show/42348376-secrets-of-sand-hill-road">[Goodreads]</a></br></p></li>
- </ul>
-  
-
-  
-
-  
-  
-
-</br>
-<hr align=left>
-    <footer>                
-    <div class="page-header" style="margin-top: 0px;"></div>
-      <span>João Bandeira, 2022</span>
-    </div>
-  </footer>
-</div>
-</div>
-
-</body>
-</html>
-
-
-  
