--- a/experience.html
+++ b/experience.html
@@ -32,7 +32,7 @@ BSc Electrical Engineering</br>
 
 
 <b>— Industry</br></br></b>
-2021-Present</br>
+<ul>2021-Present</br>
 <ul>
 <li><p><b>VC Investor - </b>Iberis Capital (Portugal)  </br>
   Investing in early-stage technology companies</br></li>
@@ -50,7 +50,7 @@ BSc Electrical Engineering</br>
     Involved in several buy-side transactions</br> 
 </br>
 </p></li></ul>
-  <b>— Operational </br></br></b>
+  </ul><b>— Operational </br></br></b><ul>
   2019-2020
   <ul>
     <li><p><b>Gather - Social App</b></br>
@@ -68,9 +68,10 @@ BSc Electrical Engineering</br>
       <a href="https://www.sailo.com/">Sailo</a></p>
       </ul>
       
-
+</ul>
   
-  <h2>Side Projects</h2>
+  <h2>Side Projects</h2> </br>
+  <ul>
       2016-2017
     <ul>
     <li><b>Turingh.com</b></li>
