--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ BSc Electrical Engineering</br>
   
   
   </br>
-  <li> <h4><a  href="experience.html">  Experience</a> </li>
-  <li><h4><a  href="books.html">  Book Recommendations</a> </li>
+  <li> <h4><a  href="experience.html">  Experience</a> </h4></li>
+  <li><h4><a  href="books.html">  Book Recommendations</a> </h4></li>
     
