--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 BSc Electrical Engineering</br>
   MSc Management, Major Finance<br />
   
-
 <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
   
-  
-  </br>
-  <li> <h4><a  href="experience.html">  Experience</a> </h4></li>
-  <li><h4><a  href="books.html">  Book Recommendations</a> </h4></li>
+</br>
+
+  <h4><li><a  href="experience.html">  Experience</a> </li></h4>
+  <h4><li><a  href="books.html">  Book Recommendations</a> </li></h4>
     
