--- a/books.html
+++ b/books.html
@@ -24,9 +24,9 @@ BSc Electrical Engineering</br>
 <a href="https://www.linkedin.com/in/joaobandeira">LinkedIn</a></p>
 </td></tr></table>
   
-  
-  
-
+  </br>
+  <a  href="index.html">  < Back to home page</a>
+</br>
   
   <h2>Book Recommendations</h2>
   
