--- a/experience.html
+++ b/experience.html
@@ -36,7 +36,7 @@ BSc Electrical Engineering</br>
 <ul>2021-Present</br>
 <ul>
 <li><p><b>VC Investor - </b>Iberis Capital (Portugal)  </br>
-  Investing in early-stage technology companies</br></li>
+  Investing in early-stage technology companies</br>
   <a href="https://soundparticles.com/">Sound Particles</a> - <a href="  https://probely.com/">Probely</a> - <a href="https://tonicapp.pt/">TonicApp</a> - <a href="https://www.sensei.tech/">Sensei</a></br> 
 </ul>
       
@@ -52,14 +52,6 @@ BSc Electrical Engineering</br>
 </br>
 </p></li></ul>
   </ul><b>— Operational </br></br></b><ul>
-  2019-2020
-  <ul>
-    <li><p><b>Gather - Social App</b></br>
-      Developed a social app to schedule events and manage social
-      agendas, published on the App Store </br>
-      <a href="https://apps.apple.com/us/app/gather-social-app/id1560805255">Apple Store</a>
-    </p></li>
-  </ul>
   
   2017-2019
   <ul>
@@ -73,6 +65,14 @@ BSc Electrical Engineering</br>
   
   <h2>Side Projects</h2> </br>
   <ul>
+    2019-2020
+    <ul>
+      <li><p><b>Gather - Social App</b></br>
+        Developed a social app to schedule events and manage social
+        agendas (published on the App Store) </br>
+        <a href="https://apps.apple.com/us/app/gather-social-app/id1560805255">Apple Store</a>
+      </p></li>
+    </ul>
       2016-2017
     <ul>
     <li><b>Turingh.com</b></li>
