--- a/books.html
+++ b/books.html
@@ -17,7 +17,7 @@
 	Based in Lisbon, Portugal</br>
 
 <br />
-BSc Electrical Engineering</br>
+BSc Electrical and Computer Engineering</br>
   MSc Management, Major Finance<br />
   
 
