--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
 	Based in Lisbon, Portugal</br>
 
 <br />
-BSc Electrical Engineering</br>
+BSc Electrical and Computer Engineering</br>
   MSc Management, Major Finance<br />
   
 
@@ -48,7 +48,7 @@ BSc Electrical Engineering</br>
 
 <ul>
   <li><p><b>Crest Capital Partners - </b><i>Private Equity (2019-2020)</i></br>
-    Involved in several buy-side transactions</br> 
+    (Description of deals) </br> 
 </br>
 </p></li></ul>
   </ul><b>Operational </br></br></b><ul>
@@ -57,7 +57,7 @@ BSc Electrical Engineering</br>
   
     <li><p><b>Sailo, Inc. - </b> <i> Country Manager (2017-2019) </i></b> </br>
       Led the expansion of the startup into Portugal</br>
-      Responsible for all the supply-side of the marketplace in Portugal</br>
+      Built the supply-side of the marketplace in Portugal</br>
       <a href="https://www.sailo.com/">Sailo</a></p>
       </ul>
       
