--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,7 @@ BSc Electrical and Computer Engineering</br>
 
 <ul>
   <li><p><b>Crest Capital Partners - </b><i>Private Equity (2019-2020)</i></br>
-    (Description of deals) </br> 
+    Involved in several private equity transactions (buyouts) </br> 
 </br>
 </p></li></ul>
   </ul><b>Operational </br></br></b><ul>
